--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -8,37 +8,49 @@ body {
 
 .container {
     background-color: white;
-    width: 70%;
+    /* width: 70%; */
     float: left;
     margin-left: 5%;
+    margin-right: 5%;
     margin-top: 5%;
     margin-bottom: 10%;
     
 }
 #container {
     background-color: white;
-    width: 75%;
+    width: 79%;
     float: left;
     margin-left: 5%;
     margin-top: 5%;
     margin-bottom: 10%;
+    border-radius: 3%;
 }
 img {
-    margin-left: 0px;
-    margin-right: 10px;
+    border: 2px solid black;
+}
+#main-pic {
+    margin: 25px;
+    /* align-items: center;  */
     height: 250px;
     width: 250px;
     border: 5px solid black;
-
 }
+
 #about {
     padding: 0px;
     margin-left: 30px;
+    /* width: 40%; */
+}
+#About {
+    width: 75%;
 }
 h1 {
     margin-top: 10px;
 }
-
+h4 {
+    font-family: 'Open Sans', sans-serif;
+    margin-bottom: 5%;
+}
 p {
     padding: 3px;  
 }
@@ -47,8 +59,26 @@ p {
     margin-top: 30px;
 }
 .pics {
-    height: 350px;
+    /* height: 350px;
     width: 350px;
     margin: 25px;
-    align-items: center;
+    align-items: center; */
+}
+.card {
+    margin: 5%;
+}
+#weThePeople {
+    height: 185px;
+}
+#resumeBtn {
+    float: right;
+    margin-left: 50%;
+    background-color: rgb(21, 96, 134);
+
+}
+#top {
+    margin: 3%;
+}
+#resumelink {
+    margin-left: 50%;
 }
